--- a/requirements.txt
+++ b/requirements.txt
@@ -95,3 +95,10 @@ websocket-client==1.8.0
 pandas~=2.2.3
 seaborn~=0.13.2
 matplotlib~=3.10.1
+google~=3.0.0
+protobuf~=6.31.0
+google-api-python-client~=2.169.0
+numpy~=2.2.6
+scipy~=1.15.3
+scikit-learn~=1.6.1
+catboost~=1.2.8
